[gd_scene load_steps=5 format=3 uid="uid://cnrrjvflykcui"]

[ext_resource type="Script" path="res://user_interface/player_hud_canvas/game_info/game_info.gd" id="1_tvrhp"]
[ext_resource type="LabelSettings" uid="uid://frs5gj5moe0e" path="res://user_interface/player_hud_canvas/hud_label.tres" id="2_1rcyy"]
[ext_resource type="Texture2D" uid="uid://b526hy6m06fei" path="res://resources/textures/mana_orb/mana_orb_medium.tres" id="3_5fgmp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqc6n"]
bg_color = Color(0.119602, 0.234308, 0.164021, 1)

[node name="GameInfo" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_tvrhp")

[node name="InventoryInfo" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 104.0
offset_bottom = 86.0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 5

[node name="VBox" type="VBoxContainer" parent="InventoryInfo"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Enemies" type="Label" parent="InventoryInfo/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Enemies left: 10"
label_settings = ExtResource("2_1rcyy")

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryInfo/VBox"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="InventoryInfo/VBox/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("3_5fgmp")
expand_mode = 2
stretch_mode = 5

[node name="ManaOrbs" type="Label" parent="InventoryInfo/VBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "99999"
label_settings = ExtResource("2_1rcyy")

[node name="AP" type="Label" parent="InventoryInfo/VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "AP: 0"
label_settings = ExtResource("2_1rcyy")

[node name="UpgradeStatsButton" type="Button" parent="InventoryInfo/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_gqc6n")
text = "RAISE STATS"

[connection signal="pressed" from="InventoryInfo/VBox/UpgradeStatsButton" to="." method="_on_upgrade_stats_pressed"]
